radeonsi: driver crashes with kwin-effects-cube
Before submitting your bug report:
- For any logs, backtraces, etc - use code blocks, GitLab removes line breaks without this.
- Do not paste long logs directly into the description. Use https://gitlab.freedesktop.org/-/snippets/new, attachments, or a pastebin with a long expiration instead.
- As examples of good bug reports you may review one of these - #2598 (closed), #2615 (closed), #2608 (closed)
System information
System:
Host: mybox Kernel: 5.18.12-gentoo x86_64 bits: 64 compiler: gcc v: 11.3.0
Desktop: KDE Plasma 5.25.3 tk: Qt 5.15.5 wm: kwin_x11 dm: LightDM
Distro: Gentoo Base System release 2.8
CPU:
Info: 16-core model: AMD Ryzen 9 5950X bits: 64 type: MT MCP arch: Zen 3
rev: 0 cache: L1: 1024 KiB L2: 8 MiB L3: 64 MiB
Speed (MHz): avg: 2225 high: 2800 min/max: 2200/3400 boost: enabled
cores: 1: 2197 2: 2198 3: 2237 4: 2198 5: 2194 6: 2195 7: 2195 8: 2199
9: 2198 10: 2199 11: 2198 12: 2198 13: 2204 14: 2198 15: 2200 16: 2203
17: 2226 18: 2236 19: 2234 20: 2242 21: 2800 22: 2239 23: 2237 24: 2215
25: 2195 26: 2200 27: 2202 28: 2197 29: 2197 30: 2199 31: 2198 32: 2199
bogomips: 217724
Flags: avx avx2 ht lm nx pae sse sse2 sse3 sse4_1 sse4_2 sse4a ssse3 svm
Graphics:
Device-1: AMD Oland [Radeon HD 8570 / R5 430 OEM / R7 240/340 / Radeon 520
OEM]
vendor: Micro-Star MSI driver: amdgpu v: kernel bus-ID: 0e:00.0
chip-ID: 1002:6611
Device-2: AMD Oland [Radeon HD 8570 / R5 430 OEM / R7 240/340 / Radeon
520 OEM]
vendor: Micro-Star MSI driver: amdgpu v: kernel bus-ID: 0f:00.0
chip-ID: 1002:6611
Display: x11 server: X.org 1.21.1.4 compositor: kwin_x11 driver:
loaded: amdgpu,ati unloaded: modesetting alternate: fbdev,vesa
1: 2048x1152~60Hz 2: 2048x1152~60Hz s-dpi: 96
OpenGL: renderer: AMD OLAND (LLVM 14.0.4 DRM 3.46 5.18.12-gentoo)
v: 4.6 Mesa 22.1.3 direct render: Yes
Issue
On this hardware/driver combination kwin_x11 crashes while starting the cube view from kwin-effects-cube. on other HW it works as fine.
Result observed
u_blitter:605: Caught recursion. This is a driver bug.
From what I can from the backtrace, kwin calls QOpenGLContext::doneCurrent()
, which seems legit, and that makes the driver explode.
Steps to reproduce
- compile & install https://github.com/zzag/kwin-effects-cube
- restart
kwin_x11
- start cube mode (Meta+C)
- screen flickers and kwin crashes
Expected behaviour
- working cube view without kwin crashing
This feature is planned to land in KDE Plasma: https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/188
Log files
I will happily assist to dig into this driver issue in order to help improve the driver. (see also https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/188#note_483836). Currently not sure how to proceed best